Prepare for Netlify deployment

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts 
+next-env.d.ts
+
+# IDE
+.idea
+.vscode 
