--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Build
         run: npm run build
         
+      - name: Export
+        run: npm run export
+        
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
